--- a/filecoinlagos2022_starterkit/package.json
+++ b/filecoinlagos2022_starterkit/package.json
@@ -9,7 +9,21 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@walletconnect/web3-provider": "^1.7.7",
+    "@web3auth/web3auth": "^0.6.3",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "magic-sdk": "7.0.0",
+    "moralis": "^1.2.3",
+    "os-browserify": "^0.3.0",
+    "react-app-rewired": "^2.2.1",
+    "react-moralis": "^1.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
