--- a/filecoinlagos2022_starterkit/package.json
+++ b/filecoinlagos2022_starterkit/package.json
@@ -24,7 +24,8 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3.storage": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
