--- a/filecoinlagos2022_starterkit/package.json
+++ b/filecoinlagos2022_starterkit/package.json
@@ -12,13 +12,14 @@
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eslint-config-react-app": "^7.0.0",
     "https-browserify": "^1.0.0",
     "magic-sdk": "7.0.0",
     "moralis": "^1.2.3",
     "os-browserify": "^0.3.0",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
     "react-moralis": "^1.2.1",
     "react-scripts": "5.0.0",
     "stream-browserify": "^3.0.0",
